# vyatta-cfg-dataplane

./: .editorconfig  .gitignore  Jenkinsfile  LICENSE  Makefile.am  README  add-pbr-tablemap  configure.ac  del-pbr-tablemap  setup.py.in  update-pbr-tablemap
debian/: .gitignore  changelog  control  copyright  golang-github-danos-vyatta-cfg-dataplane-lib-go-dev.install  libvplaned-client-dev.install  libvplaned-client1.install  libvyatta-dataplane-perl.install  libvyatta-dataplanepunt-perl.install  libvyatta-vplaned-perl.install  rules  vplane-config-backend.install  vplane-config.install  vplane-config.links  vplane-config.postinst  vyatta-arp-v1-yang.install  vyatta-dataplane-routing-instance.install  vyatta-hardware-binding-v1-yang.install  vyatta-interfaces-backplane-deviation-s9500-30xs-v1.yang.install  vyatta-interfaces-backplane-v1-yang.install  vyatta-interfaces-dataplane-deviation-ufi-apollo-ncp1-1-v1-yang.install  vyatta-interfaces-dataplane-ethernet-info-v1-yang.install  vyatta-interfaces-dataplane-pause-deviations-siad-v1-yang.install  vyatta-interfaces-dataplane-rpc-v1-yang.install  vyatta-interfaces-dataplane-speed-deviations-siad-v1-yang.install  vyatta-interfaces-dataplane-transceiver-v1-yang.install  vyatta-interfaces-dataplane-unnumbered-v1-yang.install  vyatta-interfaces-dataplane-v1-yang.install  vyatta-interfaces-tcp-mss-v1-yang.install  vyatta-interfaces-uplink-v1-yang.install  vyatta-op-clear-dataplane-v1-yang.install  vyatta-op-dataplane-mpls.install  vyatta-op-interfaces-backplane-v1-yang.install  vyatta-op-monitor-dataplane-v1-yang.install  (+18 more)
(+288 files in other folders)
